feat: add AI shopping assistant and harden product access flow
Add a streaming AI Q&A flow plus product-context prompts, and prevent public product requests from clearing auth when backend errors occur.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>