@@ -1,5 +1,8 @@
 package com.project.service;
 
+import static com.project.config.RedisCacheConfig.PRODUCT_DETAIL_CACHE;
+import static com.project.config.RedisCacheConfig.PRODUCT_LIST_CACHE;
+
 import com.project.dto.product.CreateProductResponse;
 import com.project.dto.product.ProductCreateRequest;
 import com.project.dto.product.ProductDetailResponse;
@@ -12,8 +15,13 @@ import com.project.exception.UnauthorizedException;
 import com.project.repository.CategoryRepository;
 import com.project.repository.ProductRepository;
 import com.project.security.AuthenticatedUser;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.Caching;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -23,11 +31,17 @@ public class ProductService {
     private final ProductRepository productRepository;
     private final CategoryRepository categoryRepository;
 
+    @Cacheable(
+            cacheNames = PRODUCT_LIST_CACHE,
+            key = "(#categoryId == null ? 'all' : #categoryId) + ':' + (#keyword == null ? '' : #keyword.trim()) + ':'"
+                    + " + (#page == null || #page < 1 ? 1 : #page) + ':' + "
+                    + "(#size == null || #size < 1 ? 10 : (#size > 100 ? 100 : #size))",
+            sync = true)
     public List<ProductSummaryResponse> list(Integer categoryId, String keyword, Integer page, Integer size) {
         int safePage = page == null || page < 1 ? 1 : page;
         int safeSize = size == null || size < 1 ? 10 : Math.min(size, 100);
         int offset = (safePage - 1) * safeSize;
-        return productRepository.findAll(categoryId, keyword, safeSize, offset)
+        return new ArrayList<>(productRepository.findAll(categoryId, keyword, safeSize, offset)
                 .stream()
                 .map(product -> new ProductSummaryResponse(
                         product.getProductId(),
@@ -38,14 +52,16 @@ public class ProductService {
                         product.getPrice(),
                         product.getStock(),
                         product.getStatus()))
-                .toList();
+                .collect(Collectors.toList()));
     }
 
+    @Cacheable(cacheNames = PRODUCT_DETAIL_CACHE, key = "#productId", sync = true)
     public ProductDetailResponse getDetail(Integer productId) {
         Product product = requireProduct(productId);
         return toDetail(product);
     }
 
+    @CacheEvict(cacheNames = PRODUCT_LIST_CACHE, allEntries = true)
     public CreateProductResponse create(ProductCreateRequest request, AuthenticatedUser currentUser) {
         ensureSeller(currentUser);
         validateCategory(request.getCategoryId());
@@ -63,6 +79,10 @@ public class ProductService {
         return new CreateProductResponse(true, product.getProductId());
     }
 
+    @Caching(evict = {
+        @CacheEvict(cacheNames = PRODUCT_LIST_CACHE, allEntries = true),
+        @CacheEvict(cacheNames = PRODUCT_DETAIL_CACHE, key = "#productId")
+    })
     public void update(Integer productId, ProductUpdateRequest request, AuthenticatedUser currentUser) {
         Product existing = requireProduct(productId);
         ensureSellerOwnerOrAdmin(existing, currentUser);
@@ -95,6 +115,10 @@ public class ProductService {
         productRepository.update(product);
     }
 
+    @Caching(evict = {
+        @CacheEvict(cacheNames = PRODUCT_LIST_CACHE, allEntries = true),
+        @CacheEvict(cacheNames = PRODUCT_DETAIL_CACHE, key = "#productId")
+    })
     public void delete(Integer productId, AuthenticatedUser currentUser) {
         Product existing = requireProduct(productId);
         ensureSellerOwnerOrAdmin(existing, currentUser);
