@@ -1,5 +1,7 @@
 package com.project.service;
 
+import static com.project.config.RedisCacheConfig.PRODUCT_REVIEW_CACHE;
+
 import com.project.dto.review.CreateReviewRequest;
 import com.project.dto.review.CreateReviewResponse;
 import com.project.dto.review.ReviewResponse;
@@ -7,8 +9,12 @@ import com.project.entity.Review;
 import com.project.exception.UnauthorizedException;
 import com.project.repository.ReviewRepository;
 import com.project.security.AuthenticatedUser;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -19,6 +25,7 @@ public class ReviewService {
     private final ProductService productService;
     private final UserService userService;
 
+    @CacheEvict(cacheNames = PRODUCT_REVIEW_CACHE, key = "#request.productId")
     public CreateReviewResponse create(CreateReviewRequest request, AuthenticatedUser currentUser) {
         if (!currentUser.getUserId().equals(request.getUserId()) && !"admin".equals(currentUser.getRole())) {
             throw new UnauthorizedException("No permission");
@@ -35,11 +42,12 @@ public class ReviewService {
         return new CreateReviewResponse(true, review.getReviewId());
     }
 
+    @Cacheable(cacheNames = PRODUCT_REVIEW_CACHE, key = "#productId", sync = true)
     public List<ReviewResponse> listByProduct(Integer productId) {
         productService.requireProduct(productId);
-        return reviewRepository.findByProductId(productId)
+        return new ArrayList<>(reviewRepository.findByProductId(productId)
                 .stream()
                 .map(review -> new ReviewResponse(review.getReviewId(), review.getUserId(), review.getRating(), review.getComment()))
-                .toList();
+                .collect(Collectors.toList()));
     }
 }
